--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>Document</title>
+	<title>Pulse</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<p>Hello World!</p>
+	<div class="promo">
+		<div class="container">
+			<header class="header">
+				<a href="" class="header__logo">
+					<img src="icons/logo_running-man.png" alt="logo">
+				</a>
+				<div class="header__official">
+					Официальный представитель
+					<span>Garmin, Polar, Suunto</span>
+				</div>
+				<div class="header__contacts">
+					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+					<button class="button">Заказать звонок</button>
+				</div>
+			</header>
+			<div class="promo__wrapper">
+				<h1 class="promo__header">Подбор пульсометра</h1>
+				<h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+				<div class="promo__icons">
+					<div class="promo__icon">
+						<img src="icons/selection_icons/timer_time_stopwatch.png" alt="">
+						Время подбора: <br>
+						10 минут
+					</div>
+					<div class="promo__icon">
+						<img src="icons/selection_icons/hand-cart.png" alt="">
+						Бесплатная
+						доставка
+					</div>
+					<div class="promo__icon">
+						<img src="icons/selection_icons/messages.png" alt="">
+						Ответим <br>
+						на все вопросы
+					</div>
+				</div>
+				<button class="button button_main">Заказать консультацию</button>
+				<div class="promo__link">
+					или <a href="#">Перейти в каталог</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
