complite second block

--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,27 @@
 			</div>
 		</div>
 	</div>
+	<div class="advantages">
+		<div class="container">
+			<h1 class="title">НАШИ ПРЕИМУЩЕСТВА</h1>
+			<div class="advantages__wrapper">
+				<div class="advantages__items">
+					<img src="icons/advantages_icons/cup.png" alt="">
+					<h3 class="advantages__subtitle">Делимся опытом</h2>
+					<div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				</div>
+				<div class="advantages__items">
+					<img src="icons/advantages_icons/heart.png" alt="">
+					<h3 class="advantages__subtitle">Заботимся о здоровье</h2>
+					<div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+				</div>
+				<div class="advantages__items">
+					<img src="icons/advantages_icons/shoe.png" alt="">
+					<h3 class="advantages__subtitle">Учим бегать</h2>
+					<div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
