--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 	</div>
 	<div class="advantages">
 		<div class="container">
-			<h1 class="title">НАШИ ПРЕИМУЩЕСТВА</h1>
+			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
 				<div class="advantages__items">
 					<img src="icons/advantages_icons/cup.png" alt="">
@@ -68,10 +68,26 @@
 				</div>
 				<div class="advantages__items">
 					<img src="icons/advantages_icons/shoe.png" alt="">
-					<h3 class="advantages__subtitle">Учим бегать</h2>
+					<h3 class="advantages__subtitle">Учим бегать</h3>
 					<div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
+					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="consultation">
+		<div class="container">
+			<h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
+			<div class="consultation__descr">Просто заполните форму заявки <br> 
+				и мы перезвоним вам в течении 10 минут
+			</div>
+			<form class="feed-form" action="#">
+				<input name="name" required type="text" placeholder="Ваше имя">
+				<input name="phone" required type="tel" placeholder="Ваш телефон">
+				<input name="email" required type="email" placeholder="Ваш E-mail">
+				
+				<button class="button button_submit">заказать консультацию</button>
+			</form>
 		</div>
 	</div>
 </body>
