--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
 	<title>Pulse</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<div class="promo">
+	<section class="promo">
 		<div class="container">
 			<header class="header">
 				<a href="" class="header__logo">
@@ -51,8 +52,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="advantages">
+	</section>
+	<section class="advantages">
 		<div class="container">
 			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
@@ -75,7 +76,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="consultation">
+	<section class="consultation">
 		<div class="container">
 			<h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
 			<div class="consultation__descr">Просто заполните форму заявки <br> 
@@ -89,6 +90,20 @@
 				<button class="button button_submit">заказать консультацию</button>
 			</form>
 		</div>
-	</div>
+	</section>
+	<section class="carusel">
+		<div class="container">
+			<div class="carusel__inner">
+				<div><img src="img/slides/slide1.png" alt=""></div>
+				<div><img src="img/slides/slide2.png" alt=""></div>
+				<div><img src="img/slides/slide3.png" alt=""></div>
+			  </div>
+		</div>
+
+	</section>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
