--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 	<title>Pulse</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/slick.css">
+	<!-- <link rel="stylesheet" href="css/slick.css"> -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -98,12 +99,16 @@
 				<div><img src="img/slides/slide2.png" alt=""></div>
 				<div><img src="img/slides/slide3.png" alt=""></div>
 			  </div>
+			<button type="button" class="slick-prev"><img src="icons/carusel/left-solid.png"></button>
+			<button type="button" class="slick-next"><img src="icons/carusel/right-solid.png"></button>
 		</div>
 
 	</section>
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-	<script src="js/slick.min.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script> -->
 	<script src="js/script.js"></script>
 </body>
 </html>
