--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<!-- <link rel="stylesheet" href="css/slick.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+	<script src="https://kit.fontawesome.com/a21eb3cd49.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="button">Заказать звонок</button>
+					<button data-modal="consultation" class="button">Заказать звонок</button>
 				</div>
 			</header>
 			<div class="promo__wrapper">
@@ -47,7 +48,7 @@
 						на все вопросы
 					</div>
 				</div>
-				<button class="button button_main">Заказать консультацию</button>
+				<button data-modal="consultation" class="button button_main">Заказать консультацию</button>
 				<div class="promo__link">
 					или <a href="#">Перейти в каталог</a>
 				</div>
@@ -76,17 +77,17 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 	<section class="consultation">
 		<div class="container">
 			<h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
 			<div class="consultation__descr">Просто заполните форму заявки <br> 
 				и мы перезвоним вам в течении 10 минут
 			</div>
-			<form class="feed-form" action="#">
-				<input name="name" required type="text" placeholder="Ваше имя">
-				<input name="phone" required type="tel" placeholder="Ваш телефон">
-				<input name="email" required type="email" placeholder="Ваш E-mail">
+			<form class="feed-form" id="consultation-form" action="#">
+				<input name="name"  type="text" placeholder="Ваше имя">
+				<input name="phone"  type="tel" placeholder="Ваш телефон">
+				<input name="email"  placeholder="Ваш E-mail">
 				
 				<button class="button button_submit">заказать консультацию</button>
 			</form>
@@ -102,13 +103,363 @@
 			<button type="button" class="slick-prev"><img src="icons/carusel/left-solid.png"></button>
 			<button type="button" class="slick-next"><img src="icons/carusel/right-solid.png"></button>
 		</div>
-
 	</section>
+	<section class="catalog">
+		<div class="container">
+			<h2 class="title">Каталог пульсометров</h2>
+			<ul class="catalog__tabs">
+				<li class="catalog__tab catalog__tab_active"><div>для фитнеса</div></li>
+				<li class="catalog__tab"><div>для бега</div></li>
+				<li class="catalog__tab"><div>для триатлона</div></li>
+			</ul>
+			<div class="catalog__content catalog__content_active">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+			</div>
+			<div class="catalog__content">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front catalog-item__front_active">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+								<a href="#" class="catalog-item__back">назад</a>
+							</ul>
+							
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+			</div>
+			<div class="catalog__content">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__front">
+							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<a href="#" class="catalog-item__link">подробнее</a>
+						</div>
+						<div class="catalog-item__reverse catalog-item__reverse_active">
+							<ul class="catalog-item__specific">
+								<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							</ul>
+							<a href="#" class="catalog-item__back">назад</a>
+						</div>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 750 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="button button_mini">Купить</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="reviews">
+		<div class="container">
+			<h2 class="title">Отзывы клиентов</h2>
+			<div class="reviews__block">
+				<div class="reviews-item">
+					<div class="reviews-item__photo"><img src="img/reviews/photo_1.png" alt=""></div>
+					<div class="reviews-item__descr">
+						<h3 class="reviews-item__name">Ирина Иванченко </h3>
+						<div class="reviews-item__sum">2 полумарафона</div>
+						<div class="reviews-item__text">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br><br>
+							Новые цели - новый гаджет! <br><br>
+							Спасибо, RunSmart! 
+						</div>
+					</div>
+				</div>
+
+				<div class="reviews-item">
+					<div class="reviews-item__photo"><img src="img/reviews/photo_2.png" alt=""></div>
+					<div class="reviews-item__descr">
+						<h3 class="reviews-item__name">Иван Сёмочкин</h3>
+						<div class="reviews-item__sum">1 полумарафон</div>
+						<div class="reviews-item__text">
+							Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>
+							Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br>
+							<br> С ними подготовился к своему первому полумарафону! Спасибо!!!
+						</div>
+					</div>
+				</div>
+
+				<div class="reviews-item">
+					<div class="reviews-item__photo"><img src="img/reviews/photo_3.png" alt=""></div>
+					<div class="reviews-item__descr">
+						<h3 class="reviews-item__name">Юлия Дашкина</h3>
+						<div class="reviews-item__sum">2 полумарафона</div>
+						<div class="reviews-item__text">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. <br><br>	 Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+						<br><br>	Спасибо!!!
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="footer__map">
+			<iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Aa2f07aecd689322a720bbc70794a24ed26b40e8c2f0c935decfb1031611949b1&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe>
+		</div>
+		<div class="footer__info">
+			<address >Москва, Мясницкий проезд, д.3с1</address>
+			<a href="tel:84999228974" class="footer__tel">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="" class="footer__item"><i class="fab fa-facebook-f"></i></a>
+				<a href="" class="footer__item"><i class="fab fa-instagram"></i></a>
+				<a href="" class="footer__item"><i class="fab fa-pinterest-p"></i></i></a>
+			</div>
+		</div>
+	</footer>
+
+	<div class="overlay">
+		<div class="modal" id="consultation">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Просто заполните форму заявки</div>
+			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form feed-form_m0auto_mt25" action="#">
+				<input name="name" type="text" placeholder="Ваше имя">
+				<input name="phone" type="tel" placeholder="Ваш телефон">
+				<input name="email"  placeholder="Ваш E-mail">
+				<button class="button button_submit">заказать консультацию</button>
+			</form>
+		</div>
+
+		<div class="modal" id="order">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Ваш заказ:</div>
+			<div class="modal__descr">Пульсометр Polar FT1</div>
+			<form class="feed-form feed-form_m0auto_mt25" action="#">
+				<input name="name" required type="text" placeholder="Ваше имя">
+				<input name="phone" required type="tel" placeholder="Ваш телефон">
+				<input name="email" required type="email" placeholder="Ваш E-mail">
+				<button class="button button_submit">Купить</button>
+			</form>
+		</div>
+
+		<div class="modal modal_mini" id="thanks">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">Спасибо за вашу заявку!</div>
+			<div class="modal__descr modal__descr_mini">Наш менеджер свяжется с вами в ближайшее время!</div>
+		</div>
+	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
