--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
 	<!-- <link rel="stylesheet" href="css/slick.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 	<script src="https://kit.fontawesome.com/a21eb3cd49.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<section class="promo">
+	<section id="up" class="promo">
 		<div class="container">
 			<header class="header">
 				<a href="" class="header__logo">
@@ -60,13 +61,13 @@
 			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
 				<div class="advantages__items">
-					<img src="icons/advantages_icons/cup.png" alt="">
-					<h3 class="advantages__subtitle">Делимся опытом</h2>
+					<img src="icons/advantages_icons/cup.png"  alt="">
+					<h3 class="advantages__subtitle">Делимся опытом</h3>
 					<div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
 				</div>
 				<div class="advantages__items">
-					<img src="icons/advantages_icons/heart.png" alt="">
-					<h3 class="advantages__subtitle">Заботимся о здоровье</h2>
+					<img src="icons/advantages_icons/heart.png" alt="" class="heartbeat">
+					<h3 class="advantages__subtitle">Заботимся о здоровье</h3>
 					<div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
 				</div>
 				<div class="advantages__items">
@@ -93,7 +94,7 @@
 			</form>
 		</div>
 	</section>
-	<section class="carusel">
+	<div class="carusel">
 		<div class="container">
 			<div class="carusel__inner">
 				<div><img src="img/slides/slide1.png" alt=""></div>
@@ -103,7 +104,7 @@
 			<button type="button" class="slick-prev"><img src="icons/carusel/left-solid.png"></button>
 			<button type="button" class="slick-next"><img src="icons/carusel/right-solid.png"></button>
 		</div>
-	</section>
+	</div>
 	<section class="catalog">
 		<div class="container">
 			<h2 class="title">Каталог пульсометров</h2>
@@ -113,7 +114,7 @@
 				<li class="catalog__tab"><div>для триатлона</div></li>
 			</ul>
 			<div class="catalog__content catalog__content_active">
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.1s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -140,7 +141,7 @@
 						<button class="button button_mini">Купить</button>
 					</div>
 				</div>
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -167,7 +168,7 @@
 						<button class="button button_mini">Купить</button>
 					</div>
 				</div>
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -194,7 +195,7 @@
 						<button class="button button_mini">Купить</button>
 					</div>
 				</div>
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.1s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -221,7 +222,7 @@
 						<button class="button button_mini">Купить</button>
 					</div>
 				</div>
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -248,7 +249,7 @@
 						<button class="button button_mini">Купить</button>
 					</div>
 				</div>
-				<div class="catalog-item">
+				<div class="catalog-item wow animate__animated animate__fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s">
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__front catalog-item__front_active">
 							<img src="img/photo_clock.png" alt="pulsometr" class="catalog-item__img">
@@ -318,9 +319,9 @@
 								<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
 								<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
 								<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-								<a href="#" class="catalog-item__back">назад</a>
+								
 							</ul>
-							
+							<a href="#" class="catalog-item__back">назад</a>
 						</div>
 					</div>
 					<hr>
@@ -368,7 +369,7 @@
 		<div class="container">
 			<h2 class="title">Отзывы клиентов</h2>
 			<div class="reviews__block">
-				<div class="reviews-item">
+				<div class="reviews-item wow animate__animated animate__fadeInUp">
 					<div class="reviews-item__photo"><img src="img/reviews/photo_1.png" alt=""></div>
 					<div class="reviews-item__descr">
 						<h3 class="reviews-item__name">Ирина Иванченко </h3>
@@ -380,7 +381,7 @@
 					</div>
 				</div>
 
-				<div class="reviews-item">
+				<div class="reviews-item wow animate__animated animate__fadeInUp">
 					<div class="reviews-item__photo"><img src="img/reviews/photo_2.png" alt=""></div>
 					<div class="reviews-item__descr">
 						<h3 class="reviews-item__name">Иван Сёмочкин</h3>
@@ -393,7 +394,7 @@
 					</div>
 				</div>
 
-				<div class="reviews-item">
+				<div class="reviews-item wow animate__animated animate__fadeInUp">
 					<div class="reviews-item__photo"><img src="img/reviews/photo_3.png" alt=""></div>
 					<div class="reviews-item__descr">
 						<h3 class="reviews-item__name">Юлия Дашкина</h3>
@@ -416,7 +417,7 @@
 			<div class="footer__social">
 				<a href="" class="footer__item"><i class="fab fa-facebook-f"></i></a>
 				<a href="" class="footer__item"><i class="fab fa-instagram"></i></a>
-				<a href="" class="footer__item"><i class="fab fa-pinterest-p"></i></i></a>
+				<a href="" class="footer__item"><i class="fab fa-pinterest-p"></i></a>
 			</div>
 		</div>
 	</footer>
@@ -453,6 +454,7 @@
 		</div>
 	</div>
 
+	<a href="#up" class="pageup"><i class="fas fa-arrow-alt-circle-up"></i></a>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -460,6 +462,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
+
+
 </body>
 </html>
